syntax = "proto3";

package node.v1;

option go_package = "github.com/TitleKung-01/code-tree-backend/gen/node/v1;nodev1";

// ==================== Messages ====================

enum NodeStatus {
  NODE_STATUS_UNSPECIFIED = 0;
  NODE_STATUS_STUDYING = 1;
  NODE_STATUS_GRADUATED = 2;
  NODE_STATUS_RETIRED = 3;
}

message Node {
  string id = 1;
  string tree_id = 2;
  optional string parent_id = 3;  // [deprecated] ใช้ parent_ids แทน - เก็บไว้เพื่อ backward compat
  string nickname = 4;
  string first_name = 5;
  string last_name = 6;
  string student_id = 7;
  int32 generation = 8;
  string photo_url = 9;
  NodeStatus status = 10;
  int32 sibling_order = 11;
  double position_x = 12;
  double position_y = 13;
  string created_at = 14;
  string updated_at = 15;
  repeated string parent_ids = 16;  // รองรับ multi-parent (DAG)
}

// ==================== Requests & Responses ====================

message CreateNodeRequest {
  string tree_id = 1;
  optional string parent_id = 2;  // backward compat: parent เดียว
  string nickname = 3;
  string first_name = 4;
  string last_name = 5;
  string student_id = 6;
  string photo_url = 7;
  NodeStatus status = 8;
  int32 generation = 9;
  repeated string parent_ids = 10;  // multi-parent: ถ้ามี จะใช้แทน parent_id
}

message CreateNodeResponse {
  Node node = 1;
}

message UpdateNodeRequest {
  string id = 1;
  string nickname = 2;
  string first_name = 3;
  string last_name = 4;
  string student_id = 5;
  string photo_url = 6;
  NodeStatus status = 7;
  int32 generation = 8;
}

message UpdateNodeResponse {
  Node node = 1;
}

message DeleteNodeRequest {
  string id = 1;
}

message DeleteNodeResponse {}

message MoveNodeRequest {
  string node_id = 1;
  string new_parent_id = 2;  // ย้ายไปอยู่ใต้ parent ใหม่
  int32 sibling_order = 3;
}

message MoveNodeResponse {
  Node node = 1;
}

message GetTreeNodesRequest {
  string tree_id = 1;
}

message GetTreeNodesResponse {
  repeated Node nodes = 1;
}

message UnlinkNodeRequest {
  string node_id = 1;  // node ที่จะตัดสาย (set parent = null / ลบ parent ทั้งหมด)
}

message UnlinkNodeResponse {
  Node node = 1;
}

// ★ NEW: เพิ่มพี่ให้ node (รองรับ multi-parent)
message AddParentRequest {
  string node_id = 1;     // node ที่จะเพิ่มพี่
  string parent_id = 2;   // parent ที่จะเพิ่ม
}

message AddParentResponse {
  Node node = 1;
}

// ★ NEW: ตัดสายจาก parent เฉพาะตัว
message RemoveParentRequest {
  string node_id = 1;     // node ที่จะตัดสาย
  string parent_id = 2;   // parent ที่จะตัดออก
}

message RemoveParentResponse {
  Node node = 1;
}

// ★ Public: ดู nodes ผ่าน share token (ไม่ต้อง login)
message GetNodesByShareTokenRequest {
  string share_token = 1;
}

message GetNodesByShareTokenResponse {
  repeated Node nodes = 1;
}

// ==================== Service ====================

service NodeService {
  rpc CreateNode(CreateNodeRequest) returns (CreateNodeResponse);
  rpc UpdateNode(UpdateNodeRequest) returns (UpdateNodeResponse);
  rpc DeleteNode(DeleteNodeRequest) returns (DeleteNodeResponse);
  rpc MoveNode(MoveNodeRequest) returns (MoveNodeResponse);
  rpc UnlinkNode(UnlinkNodeRequest) returns (UnlinkNodeResponse);
  rpc GetTreeNodes(GetTreeNodesRequest) returns (GetTreeNodesResponse);
  rpc AddParent(AddParentRequest) returns (AddParentResponse);
  rpc RemoveParent(RemoveParentRequest) returns (RemoveParentResponse);

  // ★ Public (ไม่ต้อง login)
  rpc GetNodesByShareToken(GetNodesByShareTokenRequest) returns (GetNodesByShareTokenResponse);
}
